		- décomposition du traitement plus avancée dans le MoveHandler
		- représentation et accès aux évènements de mort subite
		- simulation des évènements de mort subite
		- représentation et accès aux items contagieux et à effet temporaire
		- simulation des items contagieux et à effet temporaire
		- méthode permettant d'accéder à l'effet qu'un item aurait sur un joueur (effet contextuel)
	- divers:
		- changement du copyright (2012 >> 2013)
		- quelques erreurs corrigées dans les scripts de compilation

+ beta.025
	- gui :
		- possibilité de masquer le message de pause (pour captures d'écran)
		- bascule différente entre l'affichage des temps (mode débug)
		- possibiliré de masquer les sprites, par type (par ex. les persos pour faire des captures)
	- ia :
		- utilité/cas devient préférence/catégorie
		- les préférences sont définies dans un fichier xml séparé
		- les préférences sont initialisées une seule fois pour un agent donné,
		  puis copiées à chacune de ses instantiations.
		- outil de vérification des agents plus complet : importations, commentaires, etc.
		- outil de génération de code source (vide) à partir d'un agent générique

+ beta.026
	- ressources : 
		- TODO nettoyage des thèmes (moins d'images à charger, mutualisation/normalisation des fichiers xml)
		- Thème du tournoi 2013/14
		- Pretty Bomberman de SBM3
		- Niveaux du tournoi 2013/14
		- Tournoi de qualification 2013/14
	- stats
		- Évolution des stats sur l'ensemble des joueurs, pour l'ensemble des manches et des types de stats
		- Enregistrement de l'historique des joueurs, pour chaque manche jouée
	- ia :
		- possibilité de découper le code source de l'agent en deux projets (TBB vs. versions des agents)
	- options :
		- Possibilité d'enchainer les tournois automatiquement, avec sélection automatique des joueurs. 
		- Menu options modifié en conséquence (maintenant trois modes différents d'enchainement automatique)
 